<resources>
    <string name="app_name">DAM_Examen_Final_Tenorio</string>
    <string name="USER" />
    <string name="btnLog">Iniciar sesión</string>
    <string name="txt_inicio">     Iniciar sesión con Facebook</string>
    <string name="inicio2">¿Olvidaste tu contraseña?</string>
    <string name="cuen">¿No tienes una cuenta?</string>
    <string name="reg">Registrate</string>
    <string name="title_activity_notas">NotasActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notas">Notas</string>
    <string name="title_favoritas">Favoritas</string>
    <string name="title_user_profile">Mi perfil</string>
</resources>